# Med

./: .gitignore  data.json  pyproject.toml  requirements.txt
app/: SendinSES.py  admin.py  util.py
hospital/: admin.py  models.py  serializers.py  urls.py  views.py
hospital/migrations/: 0001_initial.py  0002_specialization_hospital_address_hospital_info_and_more.py  0003_hospital_created_at_hospital_updated_at_and_more.py  0004_hospital_created_by_specialization_created_by.py  0005_hospital_rating.py  0006_remove_hospital_rating.py  0007_hospital_latitude_hospital_longitude.py  0008_alter_hospital_specialization.py  0009_hospital_distance.py  0010_hospital_hospital_image.py
insurance/: admin.py  models.py  serializers.py  urls.py  views.py
insurance/migrations/: 0001_initial.py  0002_remove_procedure_hospital_and_more.py  0003_charge_created_at_charge_updated_at_and_more.py  0004_insurance_created_at_insurance_updated_at.py  0005_remove_charge_hospital_price_and_more.py  0006_charge_created_by_insurance_created_by_and_more.py  0007_remove_procedure_insurance_charge_insurance.py  0008_alter_insurance_insurance_name_and_more.py  0009_userinsurance.py  0010_charge_price.py
main/: settings.py  urls.py
payments/: admin.py  models.py  serializers.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_paymentstripe_payment_from_and_more.py  0003_alter_paymentstripe_checkout_session_details_and_more.py
review/: admin.py  models.py  serializers.py  urls.py  views.py
user/: admin.py  models.py  serializers.py  urls.py  views.py
(+9 files in other folders)
